# GNEW3

./: ...claims  ...form  ...h  .detoxrc.json  .editorconfig  .env  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .gitleaks-baseline.json  .pnpm-store  .pre-commit-config.yaml  .prettierrc  .py  .ts  .typechain  CINCO.txt  CUATRO.txt  M1aM25.txt  NUEVE.txt  OCHO.txt  README-M11.md  README-M12.md  README-M13.md  README-M14.md  README-M15.md  README-M16.md  README-M17.md  README-M18.md  README-M19.md  README-M2.md  README-M4.md  README-M6.md  README-N398.md  README.md  SEIS.txt  SIETE.txt  TRES.txt  creaREP.py  (+12 more)
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/badges/: SECURITY_BADGE.md
.github/workflows/: breach.yml  change-approval-gate.yml  chaos-redteam.yml  ci-lint.yml  ci.yml  consent-n133.yml  consent.yml  crypto.yml  (+37 more)
abis/: ERC20.json  GnosisSafe.json
analysis/: echidna.yaml  slither.config.json
app/: requirements.txt
apps/: README.md  observability.Dockerfile
contracts/: .slither.json  .solhint.json  ConsentAnchor.sol  ContentRegistry.sol  Governance.sol  N121_DIDRegistryStub.sol  README-N69.md  README.md  SybilGate.sol  TreasuryGuard.sol  foundry.toml  hardhat.config.ts  package.json
docker/: community-forum.Dockerfile  devrel-dashboard.Dockerfile  devrel-hub.Dockerfile  devrel-metrics.Dockerfile  docker-compose.observability.yml  guild-governance.Dockerfile  guild-messaging.Dockerfile  guild-registry.Dockerfile  guild-voting.Dockerfile  kpi-tracker.Dockerfile  member-reputation.Dockerfile  productivity-reviewer.Dockerfile  project-evaluation.Dockerfile  project-launcher.Dockerfile  project-tracking.Dockerfile  reputation-system.Dockerfile  resource-allocation.Dockerfile  reward-distribution.Dockerfile  secure-messaging.Dockerfile  task-assignment.Dockerfile  voting-analytics.Dockerfile
docs/: INCOMPLETE-DESIGNS.md  accounting-subledger.md  contributing.md  integration-v1.md
examples/: m4-usage.sh
formal-specs/: governance.cvl
gnew/devrel/quickstarts/python-basic/: pyproject.toml
policies/: ledger-service.hcl
runbooks/: RUNBOOK-INCIDENTS.md
script/: Deploy.s.sol
scripts/: deploy_m12.ts
security/: gitleaks-baseline.md
src/: mapping.ts
test/: ContentRegistry.t.sol
(+1726 files in other folders)
